--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -32,3 +32,13 @@
   left: 15px;
   bottom: 15px;
 }
+
+.nav_dot {
+  background-color:tomato;
+  width: 6px;
+  height: 6px;
+  border-radius: 3px;
+  position: absolute;
+  left:30px;
+  bottom:30px;
+}
