--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -23,6 +23,7 @@
     border-top: var(--main-border);
     border-bottom: var(--main-border);
 }
+
 .recommended-friends__title {
     font-size: 12px;
     color: var(--gray);
@@ -40,7 +41,8 @@
     display: flex;
     justify-content: space-between;
     opacity: 0.8;
-    margin-bottom: 25px;;
+    margin-bottom: 25px;
+    ;
 }
 
 .open-chat__header span {
@@ -49,6 +51,8 @@
 
 .open-post {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .open-post__title {
@@ -63,7 +67,7 @@
 
 .open-post__members {
     margin-top: 7px;
-    display:flex;
+    display: flex;
     align-items: center;
 }
 
@@ -88,4 +92,31 @@
 
 .open-post__member-status {
     color: #ffb0e0;
+}
+
+.open-post__photo {
+    position: relative;
+}
+
+.open-post__photo img {
+    width: 120px;
+    height: 120px;
+    border-radius: 10px;
+}
+
+.open-post__heart-count {
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 5px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    font-size: 12px;
+}
+
+.open-post__heart-count span {
+    margin-left: 3px;
 }
