--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -28,3 +28,17 @@
   justify-content: space-between;
   color: var(--gray);
 }
+
+#splash-screen {
+  background-color: var(--yellow);
+  position: absolute;
+  top: 0;
+  /* vh 100% height */
+  height: 100vh;
+  /* vw 100% width */
+  width: 100vw;
+  display: flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 132px;
+}
